add components src

--- a/demo-link/components/DAP/CMakeLists.txt
+++ b/demo-link/components/DAP/CMakeLists.txt
@@ -1,2 +1,9 @@
 idf_component_register(SRCS "DAP.c"
+"DAP_vendor.c"
+"DAP_vendor.c"
+"JTAG_DP.c"
+"SWO.c"
+"spi_op.c"
+"spi_switch.c"
+"dap_utility.c"
                     INCLUDE_DIRS "include")
