--- a/demo-link/components/USBIP/CMakeLists.txt
+++ b/demo-link/components/USBIP/CMakeLists.txt
@@ -1,2 +1,5 @@
-idf_component_register(SRCS "USBIP.c"
+idf_component_register(SRCS "USBIP.c" 
+                            "MSOS20_descriptor.c" 
+                            "usb_handle.c" 
+                            "usb_descriptor.c"
                     INCLUDE_DIRS "include")
